# RcppBoostCompute

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppBoostCompute.R  RcppExports.R
inst/include/boost.new/compute/detail/: lru_cache.hpp.rej
inst/include/boost.new/compute/utility/: program_cache.hpp
inst/include/boost/compute/: kernel.hpp  wait_list.hpp
inst/include/boost/compute/algorithm/detail/: serial_reduce.hpp
inst/include/boost/compute/detail/: lru_cache.hpp  meta_kernel.hpp  program_cache.hpp  vendor.hpp
inst/include/boost/compute/utility/: program_cache.hpp.rej
man/: CppFlags.Rd  LdFlags.Rd  RcppBoostCompute.Rd  compute_hello_world.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  compute_hello_world.cpp
tests/: testthat.R
tests/testthat/: test-helloworld.R
